--- a/factory-game.html
+++ b/factory-game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Factory Builder - GamePortal</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="css/factory-game.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="factory-game.css">
     <script src="https://pixijs.download/release/pixi.js"></script>
 </head>
 <body>
