--- a/factory-game.html
+++ b/factory-game.html
@@ -51,6 +51,6 @@
             <button id="switchWorld">Wissel van Wereld</button>
         </div>
     </div>
-    <script src="js/factory-game.js" type="module"></script>
+    <script src="factory-game.js" type="module"></script>
 </body>
 </html> 
