--- a/gallery.html
+++ b/gallery.html
@@ -61,6 +61,6 @@
 
     <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-firestore.js"></script>
-    <script src="js/gallery.js"></script>
+    <script src="gallery.js"></script>
 </body>
 </html> 
