--- a/login.html
+++ b/login.html
@@ -27,6 +27,6 @@
     </div>
     <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-auth.js"></script>
-    <script src="js/login.js"></script>
+    <script src="login.js"></script>
 </body>
 </html> 
