--- a/register.html
+++ b/register.html
@@ -37,6 +37,6 @@
             </form>
         </div>
     </div>
-    <script type="module" src="js/register.js"></script>
+    <script type="module" src="register.js"></script>
 </body>
 </html> 
