--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,6 @@
     <title>GamePortal - Game Galerij</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="gallery.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <nav class="main-nav">
@@ -59,8 +58,6 @@
         <!-- Zelfde footer als index.html -->
     </footer>
 
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-firestore.js"></script>
-    <script src="gallery.js"></script>
+    <script type="module" src="gallery.js"></script>
 </body>
 </html> 
