--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                     <input type="password" id="password" required>
                 </div>
                 <button type="submit">Inloggen</button>
-                <p class="register-link">Nog geen account? <a href="#" id="showRegister">Registreer hier</a></p>
+                <p class="register-link">Nog geen account? <a href="#" id="register">Registreer hier</a></p>
             </form>
         </div>
     </div>
