--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="main-nav">
         <div class="nav-container">
             <div class="logo">
-                <img src="PjotterPlay/Images/logo.png" alt="GamePortal Logo" height="40">
+                <img src="Images/logo.png" alt="GamePortal Logo" height="40">
             </div>
             <div class="nav-links">
                 <a href="#games">Games</a>
@@ -32,7 +32,7 @@
                 <a href="#games" class="cta-button">Begin met spelen</a>
             </div>
             <div class="hero-image">
-                <img src="PjotterPlay/Images/logo.png" alt="Gaming illustratie">
+                <img src="Images/logo.png" alt="Gaming illustratie">
             </div>
         </section>
 
