--- a/login.html
+++ b/login.html
@@ -21,12 +21,10 @@
                     <input type="password" id="password" required>
                 </div>
                 <button type="submit">Inloggen</button>
-                <p class="register-link">Nog geen account? <a href="#" id="register">Registreer hier</a></p>
+                <p class="register-link">Nog geen account? <a href="register.html">Registreer hier</a></p>
             </form>
         </div>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-auth.js"></script>
-    <script src="login.js"></script>
+    <script type="module" src="login.js"></script>
 </body>
 </html> 
