--- a/gallery.html
+++ b/gallery.html
@@ -16,6 +16,20 @@
     </nav>
 
     <div class="gallery-container">
+        <section class="game-section">
+            <div class="game-content">
+                <h2>Building your Factory</h2>
+                <p class="game-description">Bouw je eigen fabriek! Beheer grondstoffen en automatiseer productieprocessen.</p>
+                <div class="game-meta">
+                    <span class="price">Gratis</span>
+                    <a href="#" class="play-button">Speel nu</a>
+                </div>
+            </div>
+            <div class="game-image">
+                <img src="Images/Factory_game.jpeg" alt="Factory Game Screenshot">
+            </div>
+        </section>
+
         <section class="filters-section">
             <h2>Jouw Game Voorkeuren</h2>
             <div class="filters">
