--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,8 @@
     <title>GamePortal - Game Gallery</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="gallery.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -18,12 +20,9 @@
     <div class="gallery-container">
         <section class="game-section">
             <div class="game-content">
-                <h2>Building your Factory</h2>
-                <p class="game-description">Bouw je eigen fabriek! Beheer grondstoffen en automatiseer productieprocessen.</p>
-                <div class="game-meta">
-                    <span class="price">Gratis</span>
-                    <a href="#" class="play-button">Speel nu</a>
-                </div>
+                <h2>Welkom bij jouw GamePortal</h2>
+                <p class="game-description">Beste username hier kun je games spelen en bekijken.</p>
+                <p class="game-description">This is a product of Pjotters-Company</p>
             </div>
             <div class="game-image">
                 <img src="Images/Factory_game.jpeg" alt="Factory Game Screenshot">
