--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
                 <p class="game-description">This is a product of Pjotters-Company</p>
             </div>
             <div class="game-image">
-                <video src="PjotterPlay/Images/ZipZop-5.mp4" controls alt="Factory Game Video"></video>
+                <video src="Images/ZipZop-5.mp4" controls alt="Factory Game Video"></video>
             </div>
         </section>
 
