--- a/factory-game.html
+++ b/factory-game.html
@@ -6,51 +6,70 @@
     <title>Factory Builder - GamePortal</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="factory-game.css">
-    <script src="https://pixijs.download/release/pixi.js"></script>
 </head>
 <body>
     <div class="game-container">
-        <div class="game-ui">
-            <div class="resources-panel">
-                <h3>Grondstoffen</h3>
-                <div id="resourcesList"></div>
-            </div>
-            <div class="building-panel">
-                <h3>Gebouwen</h3>
-                <div class="building-option" onclick="game.selectBuilding('miner')">
-                    <span>Delver</span>
-                    <span>Kosten: 200</span>
-                </div>
-                <div class="building-option" onclick="game.selectBuilding('conveyor')">
-                    <span>Lopende Band</span>
-                    <span>Kosten: 50</span>
-                </div>
-                <div class="building-option" onclick="game.selectBuilding('transporter')">
-                    <span>Transporteur</span>
-                    <span>Kosten: 300</span>
-                </div>
-            </div>
-            <div class="workers-panel">
-                <h3>Werknemers</h3>
-                <div class="worker-option" onclick="game.hireWorker('woodcutters')">
-                    <span>Houthakker inhuren (50 geld)</span>
-                    <span id="woodcutters-count">0</span>
-                </div>
-                <div class="worker-option" onclick="game.hireWorker('miners')">
-                    <span>Mijnwerker inhuren (75 geld)</span>
-                    <span id="miners-count">0</span>
-                </div>
-                <div class="worker-option" onclick="game.hireWorker('glassmakers')">
-                    <span>Glasmaker inhuren (100 geld)</span>
-                    <span id="glassmakers-count">0</span>
-                </div>
+        <div class="game-header">
+            <h1>Factory Builder</h1>
+            <div class="resource-container">
+                <div class="resource">Geld: <span id="money">1000</span></div>
+                <div class="resource">Grondstoffen: <span id="resources">0</span></div>
+                <div class="resource">Werknemers: <span id="workers">0</span></div>
             </div>
         </div>
-        <canvas id="gameCanvas"></canvas>
-        <div class="world-switcher">
-            <button id="switchWorld">Wissel van Wereld</button>
+
+        <div class="factory-layout">
+            <div class="sidebar">
+                <div class="buildings-menu">
+                    <h2>Gebouwen</h2>
+                    <div class="building-item" data-building="delver">
+                        <h3>Delver</h3>
+                        <p>Kosten: 200</p>
+                        <button onclick="buildStructure('delver')">Bouwen</button>
+                    </div>
+                    <div class="building-item" data-building="conveyor">
+                        <h3>Lopende Band</h3>
+                        <p>Kosten: 50</p>
+                        <button onclick="buildStructure('conveyor')">Bouwen</button>
+                    </div>
+                    <div class="building-item" data-building="transporter">
+                        <h3>Transporteur</h3>
+                        <p>Kosten: 300</p>
+                        <button onclick="buildStructure('transporter')">Bouwen</button>
+                    </div>
+                </div>
+
+                <div class="workers-menu">
+                    <h2>Werknemers</h2>
+                    <div class="worker-item">
+                        <h3>Houthakker</h3>
+                        <p>Kosten: 50 per maand</p>
+                        <button onclick="hireWorker('woodcutter')">Inhuren</button>
+                    </div>
+                    <div class="worker-item">
+                        <h3>Mijnwerker</h3>
+                        <p>Kosten: 75 per maand</p>
+                        <button onclick="hireWorker('miner')">Inhuren</button>
+                    </div>
+                    <div class="worker-item">
+                        <h3>Glasmaker</h3>
+                        <p>Kosten: 100 per maand</p>
+                        <button onclick="hireWorker('glassmaker')">Inhuren</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="factory-grid" id="factoryGrid">
+                <!-- Grid voor de fabriek layout -->
+            </div>
+        </div>
+
+        <div class="game-controls">
+            <button id="startBtn">Start Productie</button>
+            <button id="pauseBtn">Pauze</button>
+            <a href="gallery.html" class="back-button">Terug naar Galerie</a>
         </div>
     </div>
-    <script src="factory-game.js" type="module"></script>
+    <script type="module" src="factory-game.js"></script>
 </body>
 </html> 
