--- a/factory-game.html
+++ b/factory-game.html
@@ -6,6 +6,7 @@
     <title>Factory Builder - GamePortal</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="factory-game.css">
+    <script src="https://pixijs.download/release/pixi.js"></script>
 </head>
 <body>
     <div class="game-container">
