--- a/gallery.html
+++ b/gallery.html
@@ -18,12 +18,9 @@
     </nav>
 
     <div class="gallery-container">
-        <section class="game-section">
-            <div class="game-content">
-                <h2>Welkom bij jouw GamePortal</h2>
-                <p class="game-description">Beste username hier kun je games spelen en bekijken.</p>
-                <p class="game-description">This is a product of Pjotters-Company</p>
-            </div>
+        <section class="hero-section">
+            <h1>Welkom username bij GamePortal</h1>
+            <p>Ontdek en speel geweldige games.</p>
         </section>
 
         <div class="content-section">
