--- a/factory-game.html
+++ b/factory-game.html
@@ -18,7 +18,7 @@
                 <div class="resource">Werknemers: <span id="workers">0</span></div>
             </div>
         </div>
-
+        <div id="gameCanvasContainer"></div>
         <div class="factory-layout">
             <div class="sidebar">
                 <div class="buildings-menu">
