--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,90 @@
         <p>Ontdek en speel geweldige games.</p>
 
         <div class="games-grid" id="allGamesGrid">
-            <!-- Dynamisch gegenereerde game kaarten komen hier -->
+            <div class="game-card" data-aos="fade-up">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="/images/factory-game.png" alt="Building your Factory" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <h3>Building your Factory</h3>
+                    </div>
+                    <div class="card-back">
+                        <p>Bouw je eigen fabriek! Beheer grondstoffen, huur werknemers in en automatiseer productieprocessen in deze verslavende factory builder.</p>
+                        <button class="play-button" onclick="window.location.href='PjotterPlay/factory-game.html'">Start Game</button>
+                    </div>
+                </div>
+            </div>
+            <div class="game-card" data-aos="fade-up">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="/images/minecraft.png" alt="Minecraft Classic" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <h3>Minecraft Classic</h3>
+                    </div>
+                    <div class="card-back">
+                        <p>Verken een oneindige wereld, bouw constructies en overleef in deze sandbox klassieker.</p>
+                        <button class="play-button" onclick="window.location.href='PjotterPlay/minecraft.html'">Start Game</button>
+                    </div>
+                </div>
+            </div>
+            <div class="game-card" data-aos="fade-up">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="/images/tetris.png" alt="Tetris Evolution" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <h3>Tetris Evolution</h3>
+                    </div>
+                    <div class="card-back">
+                        <p>De klassieke puzzelgame in een modern jasje. Met nieuwe spelmodi en multiplayer opties.</p>
+                        <button class="play-button" onclick="window.location.href='PjotterPlay/tetris.html'">Start Game</button>
+                    </div>
+                </div>
+            </div>
+            <div class="game-card" data-aos="fade-up">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="/images/space-invaders.png" alt="Space Invaders 2.0" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <h3>Space Invaders 2.0</h3>
+                    </div>
+                    <div class="card-back">
+                        <p>Neem het op tegen de aliens in deze vernieuwde versie van de klassieke Space Invaders.</p>
+                        <button class="play-button" onclick="window.location.href='PjotterPlay/space-invaders.html'">Start Game</button>
+                    </div>
+                </div>
+            </div>
+            <div class="game-card" data-aos="fade-up">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="/images/pacman.png" alt="Pac-Man Reloaded" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <h3>Pac-Man Reloaded</h3>
+                    </div>
+                    <div class="card-back">
+                        <p>Verzamel de munten en ontsnap aan de spoken in deze klassieke arcade game.</p>
+                        <button class="play-button" onclick="window.location.href='PjotterPlay/pacman.html'">Start Game</button>
+                    </div>
+                </div>
+            </div>
+            <div class="game-card" data-aos="fade-up">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="/images/mario-run.png" alt="Super Mario Run" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <h3>Super Mario Run</h3>
+                    </div>
+                    <div class="card-back">
+                        <p>Ren, spring en verzamel munten in deze spannende Mario-game.</p>
+                        <button class="play-button" onclick="window.location.href='PjotterPlay/mario-run.html'">Start Game</button>
+                    </div>
+                </div>
+            </div>
+            <div class="game-card" data-aos="fade-up">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="/images/checkers.png" alt="Dammen" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <h3>Dammen</h3>
+                    </div>
+                    <div class="card-back">
+                        <p>Speel een klassiek spel dammen tegen de computer of een vriend.</p>
+                        <button class="play-button" onclick="window.location.href='PjotterPlay/checkers.html'">Start Game</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
