--- a/factory-game.html
+++ b/factory-game.html
@@ -6,7 +6,7 @@
     <title>Factory Builder - GamePortal</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="factory-game.css">
-    <script src="https://pixijs.download/release/pixi.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/7.3.2/pixi.min.js"></script>
 </head>
 <body>
     <div class="game-container">
