--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
+            background: linear-gradient(135deg, #4116ce 0%, #3e0255 100%);
             color: white;
             padding: 2rem;
         }
