poging twee gallery

--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="gallery.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-firestore.js"></script>
     <style>
         body {
             margin: 0;
@@ -48,7 +50,7 @@
             <div class="game-card" data-aos="fade-up">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="/images/factory-game.png" alt="Building your Factory" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <img src="images/factory-game.png" alt="Building your Factory" style="width:100%; border-radius: 10px 10px 0 0;">
                         <h3>Building your Factory</h3>
                     </div>
                     <div class="card-back">
@@ -132,6 +134,6 @@
         </div>
     </div>
 
-    <script type="module" src="gallery.js"></script>
+    <script src="gallery.js"></script>
 </body>
 </html> 
