poging twee gallery

--- a/gallery.html
+++ b/gallery.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="gallery.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-firestore.js"></script>
+
     <style>
         body {
             margin: 0;
@@ -50,7 +49,7 @@
             <div class="game-card" data-aos="fade-up">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="images/factory-game.png" alt="Building your Factory" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <img src="Images/" alt="Building your Factory" style="width:100%; border-radius: 10px 10px 0 0;">
                         <h3>Building your Factory</h3>
                     </div>
                     <div class="card-back">
@@ -62,7 +61,7 @@
             <div class="game-card" data-aos="fade-up">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="/images/minecraft.png" alt="Minecraft Classic" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <img src="Images/minecraft.png" alt="Minecraft Classic" style="width:100%; border-radius: 10px 10px 0 0;">
                         <h3>Minecraft Classic</h3>
                     </div>
                     <div class="card-back">
@@ -74,7 +73,7 @@
             <div class="game-card" data-aos="fade-up">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="/images/tetris.png" alt="Tetris Evolution" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <img src="Images/tetris.png" alt="Tetris Evolution" style="width:100%; border-radius: 10px 10px 0 0;">
                         <h3>Tetris Evolution</h3>
                     </div>
                     <div class="card-back">
@@ -86,7 +85,7 @@
             <div class="game-card" data-aos="fade-up">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="/images/space-invaders.png" alt="Space Invaders 2.0" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <img src="Images/space-invaders.png" alt="Space Invaders 2.0" style="width:100%; border-radius: 10px 10px 0 0;">
                         <h3>Space Invaders 2.0</h3>
                     </div>
                     <div class="card-back">
@@ -98,7 +97,7 @@
             <div class="game-card" data-aos="fade-up">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="/images/pacman.png" alt="Pac-Man Reloaded" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <img src="Images/pacman.png" alt="Pac-Man Reloaded" style="width:100%; border-radius: 10px 10px 0 0;">
                         <h3>Pac-Man Reloaded</h3>
                     </div>
                     <div class="card-back">
@@ -110,7 +109,7 @@
             <div class="game-card" data-aos="fade-up">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="/images/mario-run.png" alt="Super Mario Run" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <img src="Images/mario-run.png" alt="Super Mario Run" style="width:100%; border-radius: 10px 10px 0 0;">
                         <h3>Super Mario Run</h3>
                     </div>
                     <div class="card-back">
@@ -122,7 +121,7 @@
             <div class="game-card" data-aos="fade-up">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="/images/checkers.png" alt="Dammen" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <img src="Images/checkers.png" alt="Dammen" style="width:100%; border-radius: 10px 10px 0 0;">
                         <h3>Dammen</h3>
                     </div>
                     <div class="card-back">
