--- a/gallery.html
+++ b/gallery.html
@@ -49,7 +49,7 @@
             <div class="game-card" data-aos="fade-up">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="Images/" alt="Building your Factory" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <img src="Images/factory-game.png" alt="Building your Factory" style="width:100%; border-radius: 10px 10px 0 0;">
                         <h3>Building your Factory</h3>
                     </div>
                     <div class="card-back">
