--- a/gallery.html
+++ b/gallery.html
@@ -130,6 +130,54 @@
                     </div>
                 </div>
             </div>
+            <div class="game-card" data-aos="fade-up">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="Images/snake.png" alt="Snake Classic" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <h3>Snake Classic</h3>
+                    </div>
+                    <div class="card-back">
+                        <p>Bestuur de slang, eet appels en word langer in deze klassieke arcade game.</p>
+                        <button class="play-button" onclick="window.location.href='PjotterPlay/snake.html'">Start Game</button>
+                    </div>
+                </div>
+            </div>
+            <div class="game-card" data-aos="fade-up">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="Images/pong.png" alt="Pong Multiplayer" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <h3>Pong Multiplayer</h3>
+                    </div>
+                    <div class="card-back">
+                        <p>Speel het klassieke Pong tegen een vriend of tegen de computer.</p>
+                        <button class="play-button" onclick="window.location.href='PjotterPlay/pong.html'">Start Game</button>
+                    </div>
+                </div>
+            </div>
+            <div class="game-card" data-aos="fade-up">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="Images/breakout.png" alt="Breakout" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <h3>Breakout</h3>
+                    </div>
+                    <div class="card-back">
+                        <p>Vernietig alle blokken met de bal in deze verslavende arcade klassieker.</p>
+                        <button class="play-button" onclick="window.location.href='PjotterPlay/breakout.html'">Start Game</button>
+                    </div>
+                </div>
+            </div>
+            <div class="game-card" data-aos="fade-up">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="Images/2048.png" alt="2048 Puzzle" style="width:100%; border-radius: 10px 10px 0 0;">
+                        <h3>2048 Puzzle</h3>
+                    </div>
+                    <div class="card-back">
+                        <p>Combineer de getallen en probeer 2048 te bereiken in deze uitdagende puzzel.</p>
+                        <button class="play-button" onclick="window.location.href='PjotterPlay/2048.html'">Start Game</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
