--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="card-back">
                         <p>Bouw je eigen fabriek! Beheer grondstoffen, huur werknemers in en automatiseer productieprocessen in deze verslavende factory builder.</p>
-                        <button class="play-button" onclick="window.location.href='PjotterPlay/factory-game.html'">Start Game</button>
+                        <button class="play-button" onclick="window.location.href='factory-game.html'">Start Game</button>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="card-back">
                         <p>Verken een oneindige wereld, bouw constructies en overleef in deze sandbox klassieker.</p>
-                        <button class="play-button" onclick="window.location.href='PjotterPlay/minecraft.html'">Start Game</button>
+                        <button class="play-button" onclick="window.location.href='minecraft.html'">Start Game</button>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="card-back">
                         <p>De klassieke puzzelgame in een modern jasje. Met nieuwe spelmodi en multiplayer opties.</p>
-                        <button class="play-button" onclick="window.location.href='PjotterPlay/tetris.html'">Start Game</button>
+                        <button class="play-button" onclick="window.location.href='tetris.html'">Start Game</button>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="card-back">
                         <p>Neem het op tegen de aliens in deze vernieuwde versie van de klassieke Space Invaders.</p>
-                        <button class="play-button" onclick="window.location.href='PjotterPlay/space-invaders.html'">Start Game</button>
+                        <button class="play-button" onclick="window.location.href='space-invaders.html'">Start Game</button>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     </div>
                     <div class="card-back">
                         <p>Verzamel de munten en ontsnap aan de spoken in deze klassieke arcade game.</p>
-                        <button class="play-button" onclick="window.location.href='PjotterPlay/pacman.html'">Start Game</button>
+                        <button class="play-button" onclick="window.location.href='pacman.html'">Start Game</button>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="card-back">
                         <p>Ren, spring en verzamel munten in deze spannende Mario-game.</p>
-                        <button class="play-button" onclick="window.location.href='PjotterPlay/mario-run.html'">Start Game</button>
+                        <button class="play-button" onclick="window.location.href='mario-run.html'">Start Game</button>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="card-back">
                         <p>Speel een klassiek spel dammen tegen de computer of een vriend.</p>
-                        <button class="play-button" onclick="window.location.href='PjotterPlay/checkers.html'">Start Game</button>
+                        <button class="play-button" onclick="window.location.href='checkers.html'">Start Game</button>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="card-back">
                         <p>Bestuur de slang, eet appels en word langer in deze klassieke arcade game.</p>
-                        <button class="play-button" onclick="window.location.href='PjotterPlay/snake.html'">Start Game</button>
+                        <button class="play-button" onclick="window.location.href='snake.html'">Start Game</button>
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                     </div>
                     <div class="card-back">
                         <p>Speel het klassieke Pong tegen een vriend of tegen de computer.</p>
-                        <button class="play-button" onclick="window.location.href='PjotterPlay/pong.html'">Start Game</button>
+                        <button class="play-button" onclick="window.location.href='pong.html'">Start Game</button>
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                     </div>
                     <div class="card-back">
                         <p>Vernietig alle blokken met de bal in deze verslavende arcade klassieker.</p>
-                        <button class="play-button" onclick="window.location.href='PjotterPlay/breakout.html'">Start Game</button>
+                        <button class="play-button" onclick="window.location.href='breakout.html'">Start Game</button>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                     </div>
                     <div class="card-back">
                         <p>Combineer de getallen en probeer 2048 te bereiken in deze uitdagende puzzel.</p>
-                        <button class="play-button" onclick="window.location.href='PjotterPlay/2048.html'">Start Game</button>
+                        <button class="play-button" onclick="window.location.href='2048.html'">Start Game</button>
                     </div>
                 </div>
             </div>
